openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: netflix-clone
  namespace: netflix-clone
  labels:
    app: netflix-clone
spec:
  to:
    kind: Service
    name: netflix-clone
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
